# aulas-kde-brasil

./: README.md
aula-1/: CMakeLists.txt
aula-1/qml/: main.qml
aula-1/src/: CMakeLists.txt  main.cpp
aula-2/: CMakeLists.txt  resources.qrc
aula-2/qml/: main.qml
aula-2/src/: CMakeLists.txt  main.cpp  mylogger.cpp  mylogger.h  myrectangle.cpp  myrectangle.h
